--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@+id/mainFragment" >
+    app:startDestination="@+id/mainFragment">
 
     <fragment
         android:id="@+id/mainFragment"
-        android:name="com.example.myapplicationsyntaxx.mainFragment"
+        android:name="mainFragment"
         android:label="fragement_main"
         tools:layout="@layout/fragment_main">
         <action
@@ -17,9 +16,9 @@
     </fragment>
     <fragment
         android:id="@+id/secondFragment"
-        android:name="com.example.myapplicationsyntaxx.secondFragment"
+        android:name="secondFragment"
         android:label="fragement_second"
-        tools:layout="@layout/fragment_second"/>
+        tools:layout="@layout/fragment_second" />
 
 
 </navigation>
